# chatrs

./: Cargo.toml  README.md
src/: args.rs  chat_loop.rs  conversations.rs  main.rs
