[package]
name = "chatrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
clap = {version = "4.1.8", features = [ "derive" ]}
#async-openai = "0.9.2"
async-openai = {git = "https://github.com/JLWhitney97/async-openai  "}
rustyline = "11.0.0"
serde = {version ="1.0.154", features = ["derive"] }
serde_json = "1.0"